--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "devDependencies": {
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "workbox-webpack-plugin": "^4.3.1"
+    "workbox-webpack-plugin": "^5.0.0-alpha.2"
   },
   "dependencies": {
     "react": "^16.7.0",
